@@ -194,6 +194,7 @@ Version 1.3
  - Pull Request #641 - Update ZMNHBA2 Config from xs4 (Justin)
  - Add Aeotec Smart Dimmer 6 Config (Justin)
  - Pull Request #649 - Add Everspring st812-Flood Detector from Warp95 (Justin)
+ - Pull Request #648 -  Added configuration file for Merten 50x5xx Roller Shutter Module from Sascha (Justin)
 
 Version 1.2 
  - Released on 15/10/14
